Minor fix on `vertical-align`.

--- a/less/style-desktop.less
+++ b/less/style-desktop.less
@@ -111,6 +111,7 @@ hr {
 	.wing-rt {
 		display: inline-block;
 		width: 10em;
+		vertical-align: -1px;
 	}
 	
 	.wing-lf { text-align: right; }
@@ -132,9 +133,12 @@ hr {
 	margin-left: 16px;
 }
 
+.sns-icon {
+	vertical-align: -5px;
+}
+
 .sns-id {
 	margin-left: 6px;
 }
-
 
 /*--- Footer style END ---*/
